comment out syllabus and project.

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -2,206 +2,207 @@ lessons:
   - title: '<span class="fake-header-table"></span>'
     header: True
     
-  - week: "Week 01"
-    date: "Mon, Aug 17"
-    title: "Welcome to STA 210!"
-    slides: "01-welcome.html"
-  - date: "Wed, Aug 19" 
-    title: "Meet the toolkit"
-    slides: "02-meet-toolkit.html"
-  - title: "Motivating regression"
-    slides: "02-motivate-regression.html"
-  - date: "Thu, Aug 20"
-    title: "Lab 01: Practice with R"
-    lab: "lab-01-practice-r.html"
+  # - week: "Week 01"
+  #   date: "Mon, Aug 17"
+  #   title: "Welcome to STA 210!"
+  #   slides: "01-welcome.html"
+  # - date: "Wed, Aug 19" 
+  #   title: "Meet the toolkit"
+  #   slides: "02-meet-toolkit.html"
+  # - title: "Motivating regression"
+  #   slides: "02-motivate-regression.html"
+  # - date: "Thu, Aug 20"
+  #   title: "Lab 01: Practice with R"
+  #   lab: "lab-01-practice-r.html"
+  # 
+  # 
+  # - date: "UNIT 01"
+  #   title: "CONTINUOUS RESPONSE VARIABLES"
+  # 
+  # - week: "Week 02"
+  #   date: "Mon, Aug 24 "
+  #   title: "Simple linear regression (SLR)"
+  #   slides: "03-slr-intro.html"
+  # - date: "Wed, Aug 26"
+  #   title: "SLR: Foundation"
+  #   slides: "04-slr-foundation.html"
+  # - title: "SLR: Inference"
+  #   slides: "04-slr-coef-inf.html"
+  # - title: "HW 01 assigned"
+  #   hw: "hw-01.html"
+  # - date: "Thu, Aug 27" 
+  #   title: "Lab 02: SLR"
+  #   lab: "lab-02-slr.html"
+  #   
+  # - week: "Week 03"
+  #   date: "Mon, Aug 31"
+  #   title: "SLR: Conditions"
+  #   slides: "05-slr-conditions.html"
+  # - title: "SLR: Prediction"
+  #   slides: "05-slr-prediction.html"
+  # - date: "Wed, Sep 02"
+  #   title: "SLR: Partitioning variability"
+  #   slides: "06-slr-partition-var.html"
+  # - title: "HW 02 assigned"
+  #   hw: "hw-02.html"
+  # - date: "Thu, Sep 03"
+  #   title: "Lab 03: Airbnbs in Nashville, TN"
+  #   lab: "lab-03-airbnb.html"
+  # 
+  # - week: "Week 04"
+  #   date: "Mon, Sep 07"
+  #   title: "Comparing means with ANOVA"
+  #   slides: "07-anova.html"
+  # - date: "Wed, Sep 09"
+  #   title: "Multiple linear regression (MLR)"
+  #   slides: "08-mlr-intro.html"
+  # - date: "Thu, Sep 10"
+  #   title: "No Lab: Take Quiz 01"
+  #   quiz: "quiz-01.html"
+  # - date: "Fri, Sep 11"
+  #   title: "Quiz 01 due"
+  #   quiz: "quiz-01.html"
+  #   
+  # - week: "Week 05"
+  #   date: "Mon, Sep 14"
+  #   title: "MLR: Inference"
+  #   slides: "09-mlr-inference.html"
+  # - date: "Wed, Sep 16"
+  #   title: "MLR: Types of predictors"
+  #   slides: "10-mlr-predictor-types.html"
+  # - title: "HW 03 assigned"
+  #   hw: "hw-03.html"
+  # - date: "Thu, Sep 17"
+  #   title: "Lab 04: Candy!"
+  #   lab: "lab-04-candy.html"
+  # 
+  # - week: "Week 06"
+  #   date: "Mon, Sep 21"
+  #   title: "Variable Transformations"
+  #   slides: "11-transformations.html"
+  # - date: "Wed, Sep 23"
+  #   title: "Model comparison"
+  #   slides: "12-model-comparison.html"
+  # - title: "HW 04 assigned" 
+  #   hw: "hw-04.html"
+  # - date: "Thu, Sep 24"
+  #   title: "Lab 05: Stockpiling toilet paper"
+  #   lab: "lab-05-tp-consumption.html"
+  #   
+  # - week: "Week 07"
+  #   date: "Mon, Sep 28"
+  #   title: "MLR: Model selection"
+  #   slides: "13-model-selection.html"
+  # - date: "Wed, Sep 30"
+  #   title: "MLR: Conditions"
+  #   slides: "14-mlr-conditions.html"
+  # - title: "MLR: Model diagnostics"
+  #   slides: "14-model-diagnostics.html"
+  # - date: "Thu, Oct 01"
+  #   title: "No lab: Take Quiz 02"
+  #   quiz: "quiz-02.html"
+  # - date: "Fri, Oct 02"
+  #   title: "Quiz 02 due"
+  #   quiz: "quiz-02.html"
+  #   
+  # - date: "UNIT 02"
+  #   title: "CATEGORICAL RESPONSE VARIABLES"
+  #   
+  # - week: "Week 08"
+  #   date: "Mon, Oct 05"
+  #   title: "Logistic: Odds + probabilities"
+  #   slides: "15-logistic-odds.html"
+  # - date: "Wed, Oct 07"
+  #   title: "Logistic: Odds ratios"
+  #   slides: "16-logistic-odds-ratios.html"
+  # - date: "Thu, Oct 08"
+  #   title: "Lab: Project proposal work day"
+  #   lab: "oct8-lab.html"
+  # - date: "Fri, Oct 09"
+  #   title: "Projet proposal due"
+  #   project: "#project-proposal"
+  # 
+  # - week: "Week 09"
+  #   date: "Mon, Oct 12"
+  #   title: "Statistics experience"
+  # - date: "Wed, Oct 14"
+  #   title: "Logistic regression: Inference"
+  #   slides: "18-logistic-inference.html"
+  # - title: "HW 05 assigned"
+  #   hw: "hw-05.html"
+  # - date: "Thu, Oct 15"
+  #   title: "Lab 06: Logistic regression"
+  #   lab: "lab-06-logistic.html"
+  # 
+  # - week: "Week 10"
+  #   date: "Mon, Oct 19"
+  #   title: "Logistic regression: Prediction"
+  #   slides: "19-logistic-prediction.html"
+  # - date: "Wed, Oct 21"
+  #   title: "Logistic regression: Conditions"
+  #   slides: "20-logistic-conditions.html"
+  # - date: "Thu, Oct 22"
+  #   title: "No lab: Take Quiz 03"
+  # - title: "Quiz 03 assigned"
+  #   quiz: "quiz-03.html"
+  # - date: "Fri, Oct 23"
+  #   title: "Quiz 03 due"
+  #   quiz: "quiz-03.html"
+  # 
+  # 
+  # - week: "Week 11"
+  #   date: "Mon, Oct 26"
+  #   title: "Multinomial logistic regression"
+  #   slides: "21-multinom-logistic.html"
+  # - date: "Wed, Oct 28"
+  #   title: "Multinomial logistic regression, Pt2"
+  #   slides: "22-multinom-logistic-pt2.html"
+  # - title: "Draft report due"
+  #   project: "#written-report"
+  # - date: "Thu, Oct 29"
+  #   title: "Lab: Project peer review"
+  #   lab: "peer-review.html"
+  #   
+  # - date: "UNIT 03"
+  #   title: "LOOKING AHEAD"
+  #  
+  # - week: "Week 12"
+  #   date: "Mon, Nov 02"
+  #   title: "Log-linear models"
+  #   slides: "23-poisson.html"
+  # - date: "Wed, Nov 04"
+  #   title: "Statistics experience"
+  # - date: "Thu, Nov 05"
+  #   title: "No Lab: Take Quiz 04"
+  # - title: "Quiz 04 assigned"
+  #   quiz: "quiz-04.html"
+  # - title: "Peer review due"
+  #   lab: "peer-review.html"
+  # - date: "Sun, Nov 08"
+  #   title: "Quiz 04 due"
+  #   quiz: "quiz-04.html"
+  #   
+  # - week: "Week 13"
+  #   date: "Mon, Nov 09"
+  #   title: "Dealing with missing data"
+  #   slides: "25-missing-data.html"
+  # - date: "Wed, Nov 11"
+  #   title: "Communicating results"
+  # - date: "Thu, Nov 12"
+  #   title: "Lab: Project work day"
+  # 
+  # - week: "Week 14"
+  #   date: "Mon, Nov 16"
+  #   title: "Project meetings"
+  # - date: "Tue, Nov 17"
+  #   title: "Final report due"
+  #   project: "#written-report"
+  # - date: "Fri, Nov 20"
+  #   title: "Video + slides + repo due"
+  #   project: "#presentation-slides"
+  #   
+  # - week: "Week 15"
+  #   date: "Sun, Nov 22"
+  #   title: "Presentation comments due"
+  #   project: "#video-presentation"
 
-  
-  - date: "UNIT 01"
-    title: "CONTINUOUS RESPONSE VARIABLES"
-
-  - week: "Week 02"
-    date: "Mon, Aug 24 "
-    title: "Simple linear regression (SLR)"
-    slides: "03-slr-intro.html"
-  - date: "Wed, Aug 26"
-    title: "SLR: Foundation"
-    slides: "04-slr-foundation.html"
-  - title: "SLR: Inference"
-    slides: "04-slr-coef-inf.html"
-  - title: "HW 01 assigned"
-    hw: "hw-01.html"
-  - date: "Thu, Aug 27" 
-    title: "Lab 02: SLR"
-    lab: "lab-02-slr.html"
-    
-  - week: "Week 03"
-    date: "Mon, Aug 31"
-    title: "SLR: Conditions"
-    slides: "05-slr-conditions.html"
-  - title: "SLR: Prediction"
-    slides: "05-slr-prediction.html"
-  - date: "Wed, Sep 02"
-    title: "SLR: Partitioning variability"
-    slides: "06-slr-partition-var.html"
-  - title: "HW 02 assigned"
-    hw: "hw-02.html"
-  - date: "Thu, Sep 03"
-    title: "Lab 03: Airbnbs in Nashville, TN"
-    lab: "lab-03-airbnb.html"
- 
-  - week: "Week 04"
-    date: "Mon, Sep 07"
-    title: "Comparing means with ANOVA"
-    slides: "07-anova.html"
-  - date: "Wed, Sep 09"
-    title: "Multiple linear regression (MLR)"
-    slides: "08-mlr-intro.html"
-  - date: "Thu, Sep 10"
-    title: "No Lab: Take Quiz 01"
-    quiz: "quiz-01.html"
-  - date: "Fri, Sep 11"
-    title: "Quiz 01 due"
-    quiz: "quiz-01.html"
-    
-  - week: "Week 05"
-    date: "Mon, Sep 14"
-    title: "MLR: Inference"
-    slides: "09-mlr-inference.html"
-  - date: "Wed, Sep 16"
-    title: "MLR: Types of predictors"
-    slides: "10-mlr-predictor-types.html"
-  - title: "HW 03 assigned"
-    hw: "hw-03.html"
-  - date: "Thu, Sep 17"
-    title: "Lab 04: Candy!"
-    lab: "lab-04-candy.html"
-
-  - week: "Week 06"
-    date: "Mon, Sep 21"
-    title: "Variable Transformations"
-    slides: "11-transformations.html"
-  - date: "Wed, Sep 23"
-    title: "Model comparison"
-    slides: "12-model-comparison.html"
-  - title: "HW 04 assigned" 
-    hw: "hw-04.html"
-  - date: "Thu, Sep 24"
-    title: "Lab 05: Stockpiling toilet paper"
-    lab: "lab-05-tp-consumption.html"
-    
-  - week: "Week 07"
-    date: "Mon, Sep 28"
-    title: "MLR: Model selection"
-    slides: "13-model-selection.html"
-  - date: "Wed, Sep 30"
-    title: "MLR: Conditions"
-    slides: "14-mlr-conditions.html"
-  - title: "MLR: Model diagnostics"
-    slides: "14-model-diagnostics.html"
-  - date: "Thu, Oct 01"
-    title: "No lab: Take Quiz 02"
-    quiz: "quiz-02.html"
-  - date: "Fri, Oct 02"
-    title: "Quiz 02 due"
-    quiz: "quiz-02.html"
-    
-  - date: "UNIT 02"
-    title: "CATEGORICAL RESPONSE VARIABLES"
-    
-  - week: "Week 08"
-    date: "Mon, Oct 05"
-    title: "Logistic: Odds + probabilities"
-    slides: "15-logistic-odds.html"
-  - date: "Wed, Oct 07"
-    title: "Logistic: Odds ratios"
-    slides: "16-logistic-odds-ratios.html"
-  - date: "Thu, Oct 08"
-    title: "Lab: Project proposal work day"
-    lab: "oct8-lab.html"
-  - date: "Fri, Oct 09"
-    title: "Projet proposal due"
-    project: "#project-proposal"
-
-  - week: "Week 09"
-    date: "Mon, Oct 12"
-    title: "Statistics experience"
-  - date: "Wed, Oct 14"
-    title: "Logistic regression: Inference"
-    slides: "18-logistic-inference.html"
-  - title: "HW 05 assigned"
-    hw: "hw-05.html"
-  - date: "Thu, Oct 15"
-    title: "Lab 06: Logistic regression"
-    lab: "lab-06-logistic.html"
-
-  - week: "Week 10"
-    date: "Mon, Oct 19"
-    title: "Logistic regression: Prediction"
-    slides: "19-logistic-prediction.html"
-  - date: "Wed, Oct 21"
-    title: "Logistic regression: Conditions"
-    slides: "20-logistic-conditions.html"
-  - date: "Thu, Oct 22"
-    title: "No lab: Take Quiz 03"
-  - title: "Quiz 03 assigned"
-    quiz: "quiz-03.html"
-  - date: "Fri, Oct 23"
-    title: "Quiz 03 due"
-    quiz: "quiz-03.html"
-  
-  
-  - week: "Week 11"
-    date: "Mon, Oct 26"
-    title: "Multinomial logistic regression"
-    slides: "21-multinom-logistic.html"
-  - date: "Wed, Oct 28"
-    title: "Multinomial logistic regression, Pt2"
-    slides: "22-multinom-logistic-pt2.html"
-  - title: "Draft report due"
-    project: "#written-report"
-  - date: "Thu, Oct 29"
-    title: "Lab: Project peer review"
-    lab: "peer-review.html"
-    
-  - date: "UNIT 03"
-    title: "LOOKING AHEAD"
-   
-  - week: "Week 12"
-    date: "Mon, Nov 02"
-    title: "Log-linear models"
-    slides: "23-poisson.html"
-  - date: "Wed, Nov 04"
-    title: "Statistics experience"
-  - date: "Thu, Nov 05"
-    title: "No Lab: Take Quiz 04"
-  - title: "Quiz 04 assigned"
-    quiz: "quiz-04.html"
-  - title: "Peer review due"
-    lab: "peer-review.html"
-  - date: "Sun, Nov 08"
-    title: "Quiz 04 due"
-    quiz: "quiz-04.html"
-    
-  - week: "Week 13"
-    date: "Mon, Nov 09"
-    title: "Dealing with missing data"
-    slides: "25-missing-data.html"
-  - date: "Wed, Nov 11"
-    title: "Communicating results"
-  - date: "Thu, Nov 12"
-    title: "Lab: Project work day"
-
-  - week: "Week 14"
-    date: "Mon, Nov 16"
-    title: "Project meetings"
-  - date: "Tue, Nov 17"
-    title: "Final report due"
-    project: "#written-report"
-  - date: "Fri, Nov 20"
-    title: "Video + slides + repo due"
-    project: "#presentation-slides"
-    
-  - week: "Week 15"
-    date: "Sun, Nov 22"
-    title: "Presentation comments due"
-    project: "#video-presentation"
