fill in schedule dates

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -2,8 +2,8 @@ lessons:
   - title: '<span class="fake-header-table"></span>'
     header: True
     
-  # - week: "Week 01"
-  #   date: "Mon, Aug 17"
+  - week: "Week 01"
+    date: "Thu, Jan 21"
   #   title: "Welcome to STA 210!"
   #   slides: "01-welcome.html"
   # - date: "Wed, Aug 19" 
@@ -19,189 +19,178 @@ lessons:
   # - date: "UNIT 01"
   #   title: "CONTINUOUS RESPONSE VARIABLES"
   # 
-  # - week: "Week 02"
-  #   date: "Mon, Aug 24 "
+  - week: "Week 02"
+    date: "Mon, Jan 25 "
   #   title: "Simple linear regression (SLR)"
   #   slides: "03-slr-intro.html"
-  # - date: "Wed, Aug 26"
+  - date: "Tue, Jan 26"
   #   title: "SLR: Foundation"
   #   slides: "04-slr-foundation.html"
   # - title: "SLR: Inference"
   #   slides: "04-slr-coef-inf.html"
   # - title: "HW 01 assigned"
   #   hw: "hw-01.html"
-  # - date: "Thu, Aug 27" 
+  - date: "Thu, Jan 28" 
   #   title: "Lab 02: SLR"
   #   lab: "lab-02-slr.html"
   #   
-  # - week: "Week 03"
-  #   date: "Mon, Aug 31"
+  - week: "Week 03"
+    date: "Mon, Feb 01"
   #   title: "SLR: Conditions"
   #   slides: "05-slr-conditions.html"
   # - title: "SLR: Prediction"
   #   slides: "05-slr-prediction.html"
-  # - date: "Wed, Sep 02"
+  - date: "Tue, Feb 02"
   #   title: "SLR: Partitioning variability"
   #   slides: "06-slr-partition-var.html"
   # - title: "HW 02 assigned"
   #   hw: "hw-02.html"
-  # - date: "Thu, Sep 03"
+  - date: "Thu, Feb 04"
   #   title: "Lab 03: Airbnbs in Nashville, TN"
   #   lab: "lab-03-airbnb.html"
   # 
-  # - week: "Week 04"
-  #   date: "Mon, Sep 07"
+  - week: "Week 04"
+    date: "Mon, Feb 08"
   #   title: "Comparing means with ANOVA"
   #   slides: "07-anova.html"
-  # - date: "Wed, Sep 09"
+  - date: "Tue, Feb 09"
   #   title: "Multiple linear regression (MLR)"
   #   slides: "08-mlr-intro.html"
-  # - date: "Thu, Sep 10"
+  - date: "Thu, Feb 11"
   #   title: "No Lab: Take Quiz 01"
-  #   quiz: "quiz-01.html"
-  # - date: "Fri, Sep 11"
-  #   title: "Quiz 01 due"
-  #   quiz: "quiz-01.html"
-  #   
-  # - week: "Week 05"
-  #   date: "Mon, Sep 14"
+  
+  - week: "Week 05"
+    date: "Mon, Feb 15"
   #   title: "MLR: Inference"
   #   slides: "09-mlr-inference.html"
-  # - date: "Wed, Sep 16"
+  - date: "Tue, Feb 16"
   #   title: "MLR: Types of predictors"
   #   slides: "10-mlr-predictor-types.html"
   # - title: "HW 03 assigned"
   #   hw: "hw-03.html"
-  # - date: "Thu, Sep 17"
+  - date: "Thu, Feb 18"
   #   title: "Lab 04: Candy!"
   #   lab: "lab-04-candy.html"
   # 
-  # - week: "Week 06"
-  #   date: "Mon, Sep 21"
+  - week: "Week 06"
+    date: "Mon, Feb 22"
   #   title: "Variable Transformations"
   #   slides: "11-transformations.html"
-  # - date: "Wed, Sep 23"
+  - date: "Tue, Feb 23"
   #   title: "Model comparison"
   #   slides: "12-model-comparison.html"
   # - title: "HW 04 assigned" 
   #   hw: "hw-04.html"
-  # - date: "Thu, Sep 24"
+  - date: "Thu, Feb 25"
   #   title: "Lab 05: Stockpiling toilet paper"
   #   lab: "lab-05-tp-consumption.html"
   #   
-  # - week: "Week 07"
-  #   date: "Mon, Sep 28"
+  - week: "Week 07"
+    date: "Mon, Mar 01"
   #   title: "MLR: Model selection"
   #   slides: "13-model-selection.html"
-  # - date: "Wed, Sep 30"
+  - date: "Tue, Mar 02"
   #   title: "MLR: Conditions"
   #   slides: "14-mlr-conditions.html"
   # - title: "MLR: Model diagnostics"
   #   slides: "14-model-diagnostics.html"
-  # - date: "Thu, Oct 01"
+  - date: "Thu, Mar 04"
   #   title: "No lab: Take Quiz 02"
-  #   quiz: "quiz-02.html"
-  # - date: "Fri, Oct 02"
-  #   title: "Quiz 02 due"
   #   quiz: "quiz-02.html"
   #   
   # - date: "UNIT 02"
   #   title: "CATEGORICAL RESPONSE VARIABLES"
   #   
-  # - week: "Week 08"
-  #   date: "Mon, Oct 05"
+  - week: "Week 08"
+    date: "Mon, Mar 08"
   #   title: "Logistic: Odds + probabilities"
   #   slides: "15-logistic-odds.html"
-  # - date: "Wed, Oct 07"
-  #   title: "Logistic: Odds ratios"
+  - date: "Tue, Mar 09"
+    title: "No class"
   #   slides: "16-logistic-odds-ratios.html"
-  # - date: "Thu, Oct 08"
+  - date: "Thu, Mar 11"
   #   title: "Lab: Project proposal work day"
   #   lab: "oct8-lab.html"
-  # - date: "Fri, Oct 09"
-  #   title: "Projet proposal due"
-  #   project: "#project-proposal"
   # 
-  # - week: "Week 09"
-  #   date: "Mon, Oct 12"
+  - week: "Week 09"
+    date: "Mon, Mar 15"
   #   title: "Statistics experience"
-  # - date: "Wed, Oct 14"
+  - date: "Tue, Mar 16"
   #   title: "Logistic regression: Inference"
   #   slides: "18-logistic-inference.html"
   # - title: "HW 05 assigned"
   #   hw: "hw-05.html"
-  # - date: "Thu, Oct 15"
+  - date: "Thu, Mar 18"
   #   title: "Lab 06: Logistic regression"
   #   lab: "lab-06-logistic.html"
   # 
-  # - week: "Week 10"
-  #   date: "Mon, Oct 19"
+  - week: "Week 10"
+    date: "Mon, Mar 22"
   #   title: "Logistic regression: Prediction"
   #   slides: "19-logistic-prediction.html"
-  # - date: "Wed, Oct 21"
+  - date: "Tue, Mar 23"
   #   title: "Logistic regression: Conditions"
   #   slides: "20-logistic-conditions.html"
-  # - date: "Thu, Oct 22"
+  - date: "Thu, Mar 25"
   #   title: "No lab: Take Quiz 03"
   # - title: "Quiz 03 assigned"
-  #   quiz: "quiz-03.html"
-  # - date: "Fri, Oct 23"
-  #   title: "Quiz 03 due"
-  #   quiz: "quiz-03.html"
-  # 
-  # 
-  # - week: "Week 11"
-  #   date: "Mon, Oct 26"
+  
+  - week: "Week 11"
+    date: "Mon, Mar 29"
   #   title: "Multinomial logistic regression"
   #   slides: "21-multinom-logistic.html"
-  # - date: "Wed, Oct 28"
+  - date: "Tue, Mar 30"
   #   title: "Multinomial logistic regression, Pt2"
   #   slides: "22-multinom-logistic-pt2.html"
   # - title: "Draft report due"
   #   project: "#written-report"
-  # - date: "Thu, Oct 29"
+  - date: "Thu, Apr 01"
   #   title: "Lab: Project peer review"
   #   lab: "peer-review.html"
   #   
   # - date: "UNIT 03"
   #   title: "LOOKING AHEAD"
   #  
-  # - week: "Week 12"
-  #   date: "Mon, Nov 02"
+  - week: "Week 12"
+    date: "Mon, Apr 05"
   #   title: "Log-linear models"
   #   slides: "23-poisson.html"
-  # - date: "Wed, Nov 04"
+  - date: "Tue, Apr 06"
   #   title: "Statistics experience"
-  # - date: "Thu, Nov 05"
+  - date: "Thu, Apr 08"
   #   title: "No Lab: Take Quiz 04"
   # - title: "Quiz 04 assigned"
   #   quiz: "quiz-04.html"
   # - title: "Peer review due"
   #   lab: "peer-review.html"
-  # - date: "Sun, Nov 08"
-  #   title: "Quiz 04 due"
+  - date: "Fri, Apr 09"
+    title: "DataFest"
+  - date: "Sat, Apr 10"
+    title: "DataFest"
+  - date: "Sun, Apr 09"
+    title: "DataFest"
   #   quiz: "quiz-04.html"
   #   
-  # - week: "Week 13"
-  #   date: "Mon, Nov 09"
-  #   title: "Dealing with missing data"
+  - week: "Week 13"
+    date: "Mon, Apr 12"
+    title: "Wellness day"
   #   slides: "25-missing-data.html"
-  # - date: "Wed, Nov 11"
-  #   title: "Communicating results"
-  # - date: "Thu, Nov 12"
+  - date: "Tue, Apr 13"
+    # title: "Communicating results"
+  - date: "Thu, Apr 15"
   #   title: "Lab: Project work day"
   # 
-  # - week: "Week 14"
-  #   date: "Mon, Nov 16"
+  - week: "Week 14"
+    date: "Mon, Apr 19"
   #   title: "Project meetings"
-  # - date: "Tue, Nov 17"
+  - date: "Tue, Apr 20"
   #   title: "Final report due"
   #   project: "#written-report"
-  # - date: "Fri, Nov 20"
+  - date: "Wed, Apr 22"
   #   title: "Video + slides + repo due"
   #   project: "#presentation-slides"
   #   
-  # - week: "Week 15"
+  - week: "Exam period"
   #   date: "Sun, Nov 22"
   #   title: "Presentation comments due"
   #   project: "#video-presentation"
