add topics to schedule.

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -4,194 +4,118 @@ lessons:
     
   - week: "Week 01"
     date: "Thu, Jan 21"
-  #   title: "Welcome to STA 210!"
-  #   slides: "01-welcome.html"
-  # - date: "Wed, Aug 19" 
-  #   title: "Meet the toolkit"
-  #   slides: "02-meet-toolkit.html"
-  # - title: "Motivating regression"
-  #   slides: "02-motivate-regression.html"
-  # - date: "Thu, Aug 20"
-  #   title: "Lab 01: Practice with R"
-  #   lab: "lab-01-practice-r.html"
-  # 
-  # 
-  # - date: "UNIT 01"
-  #   title: "CONTINUOUS RESPONSE VARIABLES"
-  # 
+    title: "Welcome to STA 210!"
+  - title: "Meet the toolkit"
+  
   - week: "Week 02"
     date: "Mon, Jan 25 "
-  #   title: "Simple linear regression (SLR)"
-  #   slides: "03-slr-intro.html"
   - date: "Tue, Jan 26"
-  #   title: "SLR: Foundation"
-  #   slides: "04-slr-foundation.html"
-  # - title: "SLR: Inference"
-  #   slides: "04-slr-coef-inf.html"
-  # - title: "HW 01 assigned"
-  #   hw: "hw-01.html"
+    title: "Multivariable relationships"
   - date: "Thu, Jan 28" 
-  #   title: "Lab 02: SLR"
-  #   lab: "lab-02-slr.html"
-  #   
+    title: "Inference review"
+
+  - date: "UNIT 01"
+    title: "CONTINUOUS RESPONSE VARIABLES"
+  
   - week: "Week 03"
     date: "Mon, Feb 01"
-  #   title: "SLR: Conditions"
-  #   slides: "05-slr-conditions.html"
-  # - title: "SLR: Prediction"
-  #   slides: "05-slr-prediction.html"
   - date: "Tue, Feb 02"
-  #   title: "SLR: Partitioning variability"
-  #   slides: "06-slr-partition-var.html"
-  # - title: "HW 02 assigned"
-  #   hw: "hw-02.html"
+    title: "Simple linear regression (SLR)"
   - date: "Thu, Feb 04"
-  #   title: "Lab 03: Airbnbs in Nashville, TN"
-  #   lab: "lab-03-airbnb.html"
-  # 
+    title: "SLR: Inference "
+  
   - week: "Week 04"
     date: "Mon, Feb 08"
-  #   title: "Comparing means with ANOVA"
-  #   slides: "07-anova.html"
   - date: "Tue, Feb 09"
-  #   title: "Multiple linear regression (MLR)"
-  #   slides: "08-mlr-intro.html"
+    title: "SLR: Conditions"
+  - title: "SLR: Prediction"
   - date: "Thu, Feb 11"
-  #   title: "No Lab: Take Quiz 01"
+    title: "SLR: Partitioning variability"
   
   - week: "Week 05"
     date: "Mon, Feb 15"
-  #   title: "MLR: Inference"
-  #   slides: "09-mlr-inference.html"
   - date: "Tue, Feb 16"
-  #   title: "MLR: Types of predictors"
-  #   slides: "10-mlr-predictor-types.html"
-  # - title: "HW 03 assigned"
-  #   hw: "hw-03.html"
+    title: "Analysis of Variance (ANOVA)"
   - date: "Thu, Feb 18"
-  #   title: "Lab 04: Candy!"
-  #   lab: "lab-04-candy.html"
-  # 
+    title: "Multiple comparisons"
+    
   - week: "Week 06"
     date: "Mon, Feb 22"
-  #   title: "Variable Transformations"
-  #   slides: "11-transformations.html"
   - date: "Tue, Feb 23"
-  #   title: "Model comparison"
-  #   slides: "12-model-comparison.html"
-  # - title: "HW 04 assigned" 
-  #   hw: "hw-04.html"
+    title: "Multiple linear regression (MLR)"
   - date: "Thu, Feb 25"
-  #   title: "Lab 05: Stockpiling toilet paper"
-  #   lab: "lab-05-tp-consumption.html"
-  #   
+    title: "MLR: Inference"
+  - title: "MLR: Conditions"
+  
   - week: "Week 07"
     date: "Mon, Mar 01"
-  #   title: "MLR: Model selection"
-  #   slides: "13-model-selection.html"
   - date: "Tue, Mar 02"
-  #   title: "MLR: Conditions"
-  #   slides: "14-mlr-conditions.html"
-  # - title: "MLR: Model diagnostics"
-  #   slides: "14-model-diagnostics.html"
+    title: "Variable types"
   - date: "Thu, Mar 04"
-  #   title: "No lab: Take Quiz 02"
-  #   quiz: "quiz-02.html"
-  #   
-  # - date: "UNIT 02"
-  #   title: "CATEGORICAL RESPONSE VARIABLES"
-  #   
+    title: "Variable transformations"
+
   - week: "Week 08"
     date: "Mon, Mar 08"
-  #   title: "Logistic: Odds + probabilities"
-  #   slides: "15-logistic-odds.html"
   - date: "Tue, Mar 09"
     title: "No class"
-  #   slides: "16-logistic-odds-ratios.html"
   - date: "Thu, Mar 11"
-  #   title: "Lab: Project proposal work day"
-  #   lab: "oct8-lab.html"
-  # 
+    title: "Model comparison"
+    
   - week: "Week 09"
     date: "Mon, Mar 15"
-  #   title: "Statistics experience"
   - date: "Tue, Mar 16"
-  #   title: "Logistic regression: Inference"
-  #   slides: "18-logistic-inference.html"
-  # - title: "HW 05 assigned"
-  #   hw: "hw-05.html"
+    title: "Model selection"
   - date: "Thu, Mar 18"
-  #   title: "Lab 06: Logistic regression"
-  #   lab: "lab-06-logistic.html"
-  # 
+    title: "Influential points"
+
+  - date: "UNIT 02"
+    title: "CATEGORICAL RESPONSE VARIABLES"
+    
   - week: "Week 10"
     date: "Mon, Mar 22"
-  #   title: "Logistic regression: Prediction"
-  #   slides: "19-logistic-prediction.html"
   - date: "Tue, Mar 23"
-  #   title: "Logistic regression: Conditions"
-  #   slides: "20-logistic-conditions.html"
+    title: "Probabilities + Odds"
   - date: "Thu, Mar 25"
-  #   title: "No lab: Take Quiz 03"
-  # - title: "Quiz 03 assigned"
+    title: "Logistic regression"
   
   - week: "Week 11"
     date: "Mon, Mar 29"
-  #   title: "Multinomial logistic regression"
-  #   slides: "21-multinom-logistic.html"
   - date: "Tue, Mar 30"
-  #   title: "Multinomial logistic regression, Pt2"
-  #   slides: "22-multinom-logistic-pt2.html"
-  # - title: "Draft report due"
-  #   project: "#written-report"
+    title: "Logistic reg: Inference"
+  - title: "Logistic reg: Conditions"
   - date: "Thu, Apr 01"
-  #   title: "Lab: Project peer review"
-  #   lab: "peer-review.html"
-  #   
-  # - date: "UNIT 03"
-  #   title: "LOOKING AHEAD"
-  #  
+    title: "Logistic reg: Prediction"
+ 
   - week: "Week 12"
     date: "Mon, Apr 05"
-  #   title: "Log-linear models"
-  #   slides: "23-poisson.html"
   - date: "Tue, Apr 06"
-  #   title: "Statistics experience"
+    title: "Multinomial logistic regression"
   - date: "Thu, Apr 08"
-  #   title: "No Lab: Take Quiz 04"
-  # - title: "Quiz 04 assigned"
-  #   quiz: "quiz-04.html"
-  # - title: "Peer review due"
-  #   lab: "peer-review.html"
+    title: "Multinomial logistic regression"
   - date: "Fri, Apr 09"
     title: "DataFest"
   - date: "Sat, Apr 10"
     title: "DataFest"
   - date: "Sun, Apr 09"
     title: "DataFest"
-  #   quiz: "quiz-04.html"
-  #   
+
+  - date: "UNIT 03"
+    title: "LOOKING AHEAD"
+ 
   - week: "Week 13"
     date: "Mon, Apr 12"
     title: "Wellness day"
-  #   slides: "25-missing-data.html"
   - date: "Tue, Apr 13"
-    # title: "Communicating results"
+    title: "Log-linear models"
   - date: "Thu, Apr 15"
-  #   title: "Lab: Project work day"
-  # 
+    title: "Weighted least squares"
+
   - week: "Week 14"
     date: "Mon, Apr 19"
-  #   title: "Project meetings"
   - date: "Tue, Apr 20"
-  #   title: "Final report due"
-  #   project: "#written-report"
-  - date: "Wed, Apr 22"
-  #   title: "Video + slides + repo due"
-  #   project: "#presentation-slides"
-  #   
-  - week: "Exam period"
-  #   date: "Sun, Nov 22"
-  #   title: "Presentation comments due"
-  #   project: "#video-presentation"
+    title: "Communicating results"
+  - date: "Thu, Apr 22"
+    title: "Communicating results"
 
+  - week: "Exam period"
+ 
