--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -22,7 +22,9 @@ lessons:
   - date: "Tue, Feb 02"
     title: "Simple linear regression (SLR)"
   - date: "Thu, Feb 04"
-    title: "SLR: Inference "
+    title: "SLR: Inference"
+  - title: "HW 01 assigned"
+    hw: "hw-01.html"
   
   - week: "Week 04"
     date: "Mon, Feb 08"
@@ -31,6 +33,8 @@ lessons:
   - title: "SLR: Prediction"
   - date: "Thu, Feb 11"
     title: "SLR: Partitioning variability"
+  - title: "HW 02 assigned"
+    hw: "hw-02.html"
   
   - week: "Week 05"
     date: "Mon, Feb 15"
@@ -53,6 +57,8 @@ lessons:
     title: "Variable types"
   - date: "Thu, Mar 04"
     title: "Variable transformations"
+  - title: "HW 03 assigned"
+    hw: "hw-03.html"
 
   - week: "Week 08"
     date: "Mon, Mar 08"
@@ -60,6 +66,8 @@ lessons:
     title: "No class"
   - date: "Thu, Mar 11"
     title: "Model comparison"
+  - title: "HW 04 assigned"
+    hw: "hw-04.html"
     
   - week: "Week 09"
     date: "Mon, Mar 15"
@@ -85,6 +93,8 @@ lessons:
   - title: "Logistic regression: Conditions"
   - date: "Thu, Apr 01"
     title: "Logistic reg: Prediction"
+  - title: "HW 05 assigned"
+    hw: "hw-05.html"
  
   - week: "Week 12"
     date: "Mon, Apr 05"
